# learn-modern-cpp

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
chapter00_hello/: CMakeLists.txt  README.md
chapter00_hello/reference/: CMakeLists.txt
chapter00_hello/reference/src/: greeting.cpp
chapter00_hello/reference/tests/: test_greeting.cpp
chapter00_hello/workspace/: README.md
chapter01_camera_view/: CMakeLists.txt  README.md
chapter01_camera_view/reference/: CMakeLists.txt
chapter01_camera_view/reference/app/: main.cpp
chapter01_camera_view/reference/tests/: test_camera_capture.cpp
chapter01_camera_view/workspace/: CMakeLists.txt
chapter01_camera_view/workspace/app/: main.cpp
chapter01_camera_view/workspace/include/greet/: greeting.hpp
chapter02_color_tracker/: CMakeLists.txt
chapter02_color_tracker/reference/: CMakeLists.txt
chapter02_color_tracker/reference/src/: main.cpp
chapter02_color_tracker/reference/tests/: test_color_tracker.cpp
chapter02_color_tracker/workspace/: CMakeLists.txt
chapter02_color_tracker/workspace/include/media/: camera_capture.hpp
chapter03_osc_sender/: CMakeLists.txt
chapter03_osc_sender/reference/: CMakeLists.txt
chapter03_osc_sender/workspace/: CMakeLists.txt
chapter03_osc_sender/workspace/include/media/: color_tracker.hpp
chapter04_detector_abstraction/: CMakeLists.txt
chapter04_detector_abstraction/reference/: CMakeLists.txt
chapter04_detector_abstraction/reference/include/media/: osc_value.hpp
chapter04_detector_abstraction/reference/tests/: test_detector.cpp
chapter04_detector_abstraction/workspace/: CMakeLists.txt
chapter04_detector_abstraction/workspace/src/: color_tracker.cpp  main.cpp
chapter04_detector_abstraction/workspace/tests/: test_osc_sender.cpp
chapter05_optical_flow/: CMakeLists.txt
chapter05_optical_flow/reference/: CMakeLists.txt
chapter05_optical_flow/reference/include/media/: osc_sender.hpp
chapter05_optical_flow/reference/src/: color_tracker.cpp  main.cpp
chapter05_optical_flow/workspace/: CMakeLists.txt
chapter05_optical_flow/workspace/src/: main.cpp  osc_sender.cpp
chapter06_async_pipeline/: CMakeLists.txt
chapter06_async_pipeline/reference/: CMakeLists.txt
chapter06_async_pipeline/reference/app/: main.cpp
chapter06_async_pipeline/reference/include/media/: detector.hpp  spsc_queue.hpp
chapter06_async_pipeline/workspace/: CMakeLists.txt
chapter06_async_pipeline/workspace/tests/: test_optical_flow.cpp
chapter07_config/: CMakeLists.txt
chapter07_config/reference/: CMakeLists.txt
chapter07_config/reference/src/: main.cpp
chapter07_config/workspace/: CMakeLists.txt
chapter07_config/workspace/include/media/: optical_flow.hpp  pipeline.hpp
chapter07_config/workspace/tests/: test_pipeline.cpp
chapter08_pose_estimation/: CMakeLists.txt
chapter08_pose_estimation/reference/: CMakeLists.txt
chapter08_pose_estimation/reference/include/media/: camera_capture.hpp  pose_estimator.hpp
chapter08_pose_estimation/reference/src/: pose_estimator.cpp
chapter08_pose_estimation/reference/tests/: test_pose_estimator.cpp
chapter08_pose_estimation/workspace/: CMakeLists.txt
chapter08_pose_estimation/workspace/assets/: config.sample.toml
chapter08_pose_estimation/workspace/src/: optical_flow.cpp  pipeline.cpp
chapter09_osc_receive/: CMakeLists.txt
chapter09_osc_receive/reference/: CMakeLists.txt
chapter09_osc_receive/reference/include/media/: minimal_osc.hpp  osc_receiver.hpp  ui_state.hpp
chapter09_osc_receive/reference/src/: camera_capture.cpp  config.cpp  main.cpp  osc_receiver.cpp  ui_state.cpp
chapter09_osc_receive/reference/tests/: test_ui_state.cpp
chapter09_osc_receive/workspace/: CMakeLists.txt
chapter09_osc_receive/workspace/include/media/: color_tracker.hpp  config.hpp
chapter09_osc_receive/workspace/tests/: test_config.cpp
cmake/: Dependencies.cmake  Warnings.cmake
docs/: index.html  setup.md
docs/deepdive/: 00-cmake-mental-model.md  00-header-vs-source.md  01-raii.md  02-move-semantics.md  03-variant-vs-union.md  04-concepts-vs-virtual.md  05-stack-vs-heap-cache.md  06-coroutines-vs-asyncawait.md  07-expected-vs-exceptions.md  08-span-and-capi-interop.md  09-resource-lifetime-order.md
